Revert setting height on DataGrid header cell again. Leads to issues on Safari

--- a/src/Core/Components/DataGrid/FluentDataGridCell.razor.css
+++ b/src/Core/Components/DataGrid/FluentDataGridCell.razor.css
@@ -11,7 +11,6 @@ fluent-data-grid-cell {
 .column-header {
     display: flex;
     width: 100%;
-    height: 100%;
     align-self: center;
     padding-inline: 0;
     padding-right: 1px;
